<resources>
    <string name="app_name">Shark</string>
    <string name="option_one">Display your QR code</string>
    <string name="option_two">Scan QR code</string>
    <string name="share_activity_name">Share OR Code</string>
    <string name="register_activity_name">Register</string>
    <string name="scan_activity_name">Scan QR Code</string>
    <string name="sign_activity_name">Sign Key</string>
    <string name="email_hint">Email address</string>
    <string name="name_hint">Name</string>
    <string name="public_key_hint">Select public key file</string>
    <string name="private_key_hint">Select private key file</string>
    <string name="scanned_public_key_hint">Public key ID</string>
    <string name="scanned_private_key_hint">Private key</string>
    <string name="sign_button_text">Sign scanned user\'s\nkey with your key</string>
    <string name="slide1title">Welcome!</string>
    <string name="slide1description">Shark provides an easy way to share and sign PGP public keys.</string>
    <string name="slide2title">Permissions</string>
    <string name="slide2description">We require the use of your device\'s camera to scan QR codes and read-only access to device storage in order to access your key files. Please grant these permissions when prompted.</string>
    <string name="slide3title">Permissions</string>
    <string name="slide3description">Also, we use your device\'s Internet connection in order to store/retrieve public keys on our server.</string>
    <string name="slide4title">Let\'s get started!</string>
    <string name="slide4description">Press DONE to proceed.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="opensource_activity_name">Open Source Licenses</string>
    <string name="keygeneration_activity_name">Generate keypair</string>
</resources>
