<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="io.github.shark_app.shark.RegisterActivity"
    android:background="@color/fbutton_color_peter_river">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <com.github.florent37.materialtextfield.MaterialTextField
            android:layout_width="@dimen/edittext_width"
            android:layout_height="wrap_content"
            app:mtf_image="@drawable/ic_account_box_black_24dp">
            <EditText
                android:id="@+id/nameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint"
                android:textColor="@color/dark_grey"
                android:textColorHint="@color/grey"/>
        </com.github.florent37.materialtextfield.MaterialTextField>

        <com.github.florent37.materialtextfield.MaterialTextField
            android:layout_width="@dimen/edittext_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_padding"
            app:mtf_image="@drawable/ic_email_black_24dp">
            <EditText
                android:id="@+id/emailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:textColor="@color/dark_grey"
                android:textColorHint="@color/grey"/>
        </com.github.florent37.materialtextfield.MaterialTextField>

        <info.hoang8f.widget.FButton
            android:id="@+id/publicKeyButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/standard_padding"
            android:paddingTop="@dimen/standard_padding"
            android:paddingBottom="@dimen/standard_padding"
            android:paddingLeft="@dimen/standard_padding"
            android:paddingRight="@dimen/standard_padding"
            android:textColor="@android:color/white"
            android:text="@string/public_key_hint"
            fbutton:buttonColor="@color/fbutton_color_emerald"
            fbutton:shadowEnabled="true"/>

        <info.hoang8f.widget.FButton
            android:id="@+id/privateKeyButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/standard_padding"
            android:paddingTop="@dimen/standard_padding"
            android:paddingBottom="@dimen/standard_padding"
            android:paddingLeft="@dimen/standard_padding"
            android:paddingRight="@dimen/standard_padding"
            android:textColor="@android:color/white"
            android:text="@string/private_key_hint"
            fbutton:buttonColor="@color/fbutton_color_alizarin"
            fbutton:shadowEnabled="true"/>

        <info.hoang8f.widget.FButton
            android:id="@+id/registerButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/standard_padding"
            android:paddingTop="@dimen/standard_padding"
            android:paddingBottom="@dimen/standard_padding"
            android:paddingLeft="@dimen/standard_padding"
            android:paddingRight="@dimen/standard_padding"
            android:textColor="@android:color/white"
            android:text="@string/register_activity_name"
            android:drawableLeft="@drawable/ic_backup_white_24dp"
            android:drawablePadding="@dimen/standard_padding"
            fbutton:buttonColor="@color/fbutton_color_wet_asphalt"
            fbutton:shadowEnabled="true"/>
    </LinearLayout>
</RelativeLayout>
